safari browser does not support used css to flip card so add some extra css to solve  -webkit-backface-visibility: hidden;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ img {
 .front-card {
     position: relative;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     transform: rotateY(180deg);
     width: 100%;
     height: 100%;
@@ -117,6 +118,7 @@ img {
     height: 100%;
     position: absolute;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .card:active {
